--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.12
 coverage==5.3.1
 Django==4.0.2
 django-countries==7.2.1
+django-environ==0.8.1
 flake8==4.0.1
 flake8-django==1.1.1
 idna==3.3
